--- a/doc/util/hx-macro.sty
+++ b/doc/util/hx-macro.sty
@@ -19,9 +19,9 @@
 \newcommand{\ALL}{Tutti i membri del gruppo \hx}
 
 % Professori e committente:
-\newcommand{\TV}{prof. Tullio Vardanega}
-\newcommand{\RC}{prof. Riccardo Cardin}
-\newcommand{\GP}{dott. Gregorio Piccoli}
+\newcommand{\TV}{prof. Vardanega}
+\newcommand{\RC}{prof. Cardin}
+\newcommand{\GP}{dott. Piccoli}
 \newcommand{\ZU}{Zucchetti S.P.A.}
 
 % Segnatura dei termini nel glossario:
