elenchi puntati dei verbali ;)

--- a/doc/util/hx-macro.sty
+++ b/doc/util/hx-macro.sty
@@ -16,7 +16,7 @@
 \newcommand{\MM}{Marco Meneghetti}
 \newcommand{\LS}{Luca Sgambaro}
 \newcommand{\AZ}{Alberto Zanatta}
-\newcommand{\ALL}{Tutti i membri del gruppo \hx}
+\newcommand{\ALL}{tutti i membri del gruppo \hx}
 
 % Professori e committente:
 \newcommand{\TV}{prof. Vardanega}
