--- a/doc/Interni/Norme_di_progetto/Norme_di_progetto_0_0_4.tex
+++ b/doc/Interni/Norme_di_progetto/Norme_di_progetto_0_0_4.tex
@@ -3,12 +3,12 @@
 
 \input{../../util/hx-ambiente}
 
-\version{0.0.3}
+\version{0.0.4}
 \creaz{24 dicembre 2016}
 \author{\GG, \MM}
 \supervisor{\LB, \AZ}
 \uso{interno}
-\dest{Tutti i membri del gruppo}
+\dest{\ALL}
 \title{Norme di progetto}
 
 
@@ -82,48 +82,40 @@ Il presente documento si divide in tre sezioni principali:
 \subsection{Fornitura}
 
 	\subsubsection{Studio di fattibilità}
-	La fase antecedente alla realizzazione del \gloss{progetto} consiste nel fissare delle riunioni in modo che il gruppo possa discutere di esso. Sarà poi compito degli analisti redigere lo \textit{studio di fattibilità},sulla base di cosa è emerso dai dalle riunioni, come ad esempio il dominio applicativo del capitolato;
+	La fase antecedente alla realizzazione del \gloss{progetto} consiste nel fissare delle riunioni in modo che il gruppo possa discutere di esso. È poi compito degli analisti redigere lo studio di fattibilità, sulla base di ciò che è emerso dalle riunioni (come ad esempio il dominio applicativo del capitolato).
 
 \subsection{Sviluppo}
 	\subsubsection{Analisi dei requisiti}
-	Sarà sempre compito degli analisti al termine dello studio di fattibilità di produrre l'\textit{analisi dei requisiti}. Questo documento conterrà i requisiti raccolti ed i casi uso individuati nelle riunioni svolte.
-	Viene elencata nelle sezioni a seguire la struttura obbligatoria di requisiti e casi d'uso.
-		\paragraph{Requisiti}%da guardare come esporta pragmadb e nel caso correggere
+	Al termine dello studio di fattibilità, è compito degli analisti elencare e analizzare i requisiti del prodotto da sviluppare. Essi devono poi documentare l'analisi nel documento di analisi dei requisiti; questo documento contiene i requisiti raccolti e i casi uso individuati nelle riunioni svolte.
+	Viene elencata nelle sezioni seguenti la struttura obbligatoria di requisiti e casi d'uso.
+		\paragraph{Requisiti} % da guardare come esporta pragmadb e nel caso correggere
 		Dopo aver individuato i requisiti tramite le varie riunioni, è compito degli analisti redarne un elenco con la seguente struttura:
-		
 		\begin{equation}
 			R[Importanza][Tipo][ID]
 		\end{equation}
-		
-		\begin{itemize}
-		
-			\item[Importanza]: indica se il requisito è:
-			
+		dove:
+		\begin{description}
+			\item[Importanza] indica se il requisito è:
 			\begin{itemize}
-				\item obbligatorio:
+				\item obbligatorio;
 				\item opzionale;
 				\item desiderabile.
 			\end{itemize}
-			
-			\item[Tipo]: indica il tipo del requisito che può essere:
-			
-			\begin{itemize}
-				\item F: funzionale;
-				\item Q: di qualità;
-				\item P: prestazionale;
-				\item V: di vincolo.
-			\end{itemize}
-			
-			\item[ID]: codice identificativo univoco del requisito.
-			
-		\end{itemize}
-		
-		Un requisito ha inoltre specificato:
+			\item[Tipo] indica il tipo del requisito, che può essere:
+			\begin{description}
+				\item[F] funzionale;
+				\item[Q] di qualità;
+				\item[P] prestazionale;
+				\item[V] di vincolo.
+			\end{description}
+			\item[ID] identifica univocamente il requisito.
+		\end{description}
+		Inoltre, per ogni requisito l'analista deve specificare:
 		\begin{itemize}
-		\item una breve descrizione di esso;
-		\item un requisito padre se presente;
-		\item la fonte da cui deriva;
-		\item se è stato effettivamente implementato.
+			\item una breve descrizione di esso;
+			\item un requisito padre (se presente);
+			\item la fonte da cui deriva;
+			\item se è stato effettivamente implementato.
 		\end{itemize}
 		\paragraph{Casi d'uso}
 		Ogni caso d'uso viene identificato nel seguente modo:
@@ -256,7 +248,6 @@ Per gestire la configurazione del software va utilizzato il sistema \gloss{Git},
 	\item[\texttt{src}] per il codice sorgente.
 \end{description}
 
-\subsubsection{Branching} La vita di un \gloss{branch} (ramo) è vincolata alle seguenti regole:
 \subsubsection{Identificazione e versionamento} \label{sec:idvers}
 Definiamo la configurazione del nostro software come composta dai seguenti elementi:
 \begin{itemize}
