norme di processo: finito di correggere

--- a/doc/Interni/Norme_di_progetto/Norme_di_progetto_0_0_4.tex
+++ b/doc/Interni/Norme_di_progetto/Norme_di_progetto_0_0_4.tex
@@ -132,6 +132,7 @@ Il presente documento si divide in tre sezioni principali:
 		\end{description}
 	\subsubsection{Progettazione}
 	% teniamo questo per una revisione successiva
+	La sezione sulla progettazione (norme e strumenti) verrà stesa in una versione successiva di questo documento.
 	% Il compito dei progettisti consiste di progettare l'architettura del software. % da completare.
 	% La fase di progettazione deve utilizzare come diagrammi \gloss{UML} quelli sotto descritti,in riferimento allo standard UML 2.0:
 	% \begin{itemize}
@@ -139,10 +140,10 @@ Il presente documento si divide in tre sezioni principali:
 		% \item \gloss{Diagrammi dei package}:raggruppa un numero di elementi UML in una sola unità di livello più alto.
 		% \item \gloss{Diagrammi di attività}:descrive in dettaglio un algoritmo
 		% \item \gloss{Diagrammi di sequenza}:descrive uno scenario,dove le azioni sono disposte in sequenza e le varie scelte sono già state prese.
-		% \end{itemize}
-		La sezione di progettazione(norme e strumenti) verrà definita in una sezione successiva di questo documento.
+	% \end{itemize}
 	\subsubsection{Codifica} \label{sec:cod}
 	% stessa cosa di sopra
+	La sezione sulla codifica (norme e strumenti) verrà stesa in una versione successiva di questo documento.
 	% Lo scopo dell'attività di codifica è di implementare quanto descritto nei documenti di definizione di prodotto a livello di codice. Per mantenere un alto grado di comprensione del codice scritto è quindi utile seguire delle linee guida che definiscono lo standard di scrittura e documentazione di esso.
 		% \paragraph{Formattazione del codice}
 		% Per standardizzare il codice scritto dai vari programmatori è necessario rispettare i seguenti punti:
@@ -150,7 +151,6 @@ Il presente documento si divide in tre sezioni principali:
 				% \item i nomi di variabili, classi, funzioni e metodi sono scritti in inglese;
 				% \item i nomi composti dovranno avere la prima lettera minuscola e la lettera maiuscola ad ogni iniziale della nuova parola che compone il nome.
 				% \item è opportuno scegliere il nome dei vari elementi in modo coerente con la loro funzione;
-				
 			% \end{itemize}
 		% \paragraph{Commenti}
 		% Per facilitare la comprensione del codice è fondamentale l'uso di commenti. A seguire dei suggerimenti per il loro inserimento:
@@ -163,7 +163,6 @@ Il presente documento si divide in tre sezioni principali:
 			% \item Evitare di usare troppi simboli per separare i commenti. Lasciare invece uno spazio vuoto per separarli dal codice;
 			% \item Nel caso i commenti facciano parte anche della documentazione seguire le linee guida di jdoc (https://github.com/jsdoc3/jsdoc) %nel caso javascript
 		% \end{itemize}
-		La sezione di codifica(norme e strumenti) verrà definita in una sezione successiva di questo documento.
 	\subsubsection{Strumenti}
 		\paragraph{PragmaDB}
 		Per tenere traccia dei casi d'uso e dei requisiti il team ha scelto di usare PragmaDB (https://github.com/StefanoMunari/PragmaDB) creato da studenti degli anni passati. Il programma è accessibile via browser ed è possibile usarlo collegandosi al server creato dal team tramite autenticazione. Inoltre permette l'esportazione in \LaTeX{} delle varie tabelle(requisiti,glossario,...) seguendo le linee guida di struttura descritte in questo documento.
