--- a/doc/util/hx-ambiente.tex
+++ b/doc/util/hx-ambiente.tex
@@ -6,10 +6,11 @@
 \usepackage[T1]{fontenc}
 \usepackage[utf8]{inputenc}
 \usepackage[english,italian]{babel}
-\usepackage{hyperref}
 \usepackage{microtype}
-\usepackage{lmodern} %compila cosi?
+\usepackage{lmodern}
 \usepackage{underscore}
+\usepackage{graphicx}
+\usepackage{hyperref}
 
 \usepackage{../../util/hx-vers}
 \usepackage{../../util/hx-macro}
